--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -781,7 +781,7 @@
 }
 
 /* Task Add */
-/* .col-form-label {
+ .col-form-label {
     color: #01041b;
 }
 
@@ -816,8 +816,7 @@
 .border-task-description {
     background-color: #f8f7f7;
     line-height: 28px;
-} */
-
+}
 /**Task End**/
 
 .issue-time-line p {
